monitoring/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: grafana
  name: monitoring-grafana
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: grafana
  selector:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: grafana
